# envparse-stubs

./: LICENSE  README.md  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: run_tests.yml
envparse-stubs/: __init__.pyi
tests/: test_envparse.yml
