[metadata]
name = envparse-stubs
version = 0.1.2
author = Rob Percival
author_email = rob.percival87@gmail.com
description = Type stubs for the envparse library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RJPercival/envparse-stubs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = envparse-stubs
include-package-data = True
python_requires = >=3.5
install_requires =
    envparse >= 0.2, < 1

[options.package_data]
envparse-stubs = __init__.pyi
